k8s/demo/ingress/service-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: ingress-nginx
  namespace: ingress-nginx
spec:
  type: NodePort
  ports:
  - name: http
    port: 80
    targetPort: 80
  - name: https 
    port: 443
    targetPort: 443
  selector:
    app.kubernetes.io/name: ingress-nginx
