k8s/demo/ingress/myapp-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-myapp
  namespace: default
  annotations:
     kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: myapp.doudou.com 
    http:
      paths:
      - path:
        backend:
         serviceName: myapp  
         servicePort: 80
